Первый комит локально рабочей версии тестового проекта

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,3 +29,12 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Reports\DataLoader\GroupedByUsernameDataLoader:
+        tags: ['report.data_loader']
+
+    App\Reports\DataLoader\GroupedByDateDataLoader:
+        tags: ['report.data_loader']
+
+    App\Reports\DataLoader\GroupedByUsernameAndDateDataLoader:
+        tags: ['report.data_loader']
